--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^12.1.10",
     "d3-scale": "^4.0.0",
     "dagre": "^0.8.5",
-    "gridset": "0.0.5",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-localstorage-cache": "^1.1.1",
@@ -16,7 +15,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-svg-path": "file:react-svg-path",
+    "react-svg-path": "^1.13.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
