--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "gh-pages": "^3.2.3",
     "react-axe": "^3.5.4"
   }
 }
