add homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "react-svg-path-docs",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://joemaddalone.github.io/react-svg-path-docs/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/joemaddalone/react-svg-path-docs"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
