--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "url": "https://github.com/joemaddalone/react-svg-path-docs"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
     "d3-scale": "^4.0.0",
     "elkjs": "^0.7.1",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-localstorage-cache": "^1.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-svg-path": "^1.15.0",
-    "web-vitals": "^1.0.1"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "5.0.1",
+    "react-svg-path": "^1.16.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,7 +52,11 @@
   },
   "devDependencies": {
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "gh-pages": "^3.2.3",
-    "react-axe": "^3.5.4"
+    "gh-pages": "^3.2.3"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^d3-(.+)$": "<rootDir>/node_modules/d3-$1/dist/d3-$1.js"
+    }
   }
 }
